<resources>
    <string name="version_apk">V.2.5.6.11</string>
    <string name="app_name">Bazar POS Mobile Crystal</string>
    <string name="titulo">Bazar POS Mobile</string>
    <string name="titulo_config">Configurar Caja</string>
    <string name="titulo_clente">Consultar Clientes</string>
    <string name="titulo_cierre_datafono">Cierre TEF</string>
    <string name="titulo_utltrans_datafono">Última Transacción</string>
    <string name="titulo_anular_datafono">Anular Transacción</string>
    <string name="titulo_bono_regalo_datafono">Bono Regalo</string>
    <string name="titulo_medios_pagos">Medios de Pago</string>
    <string name="titulo_impresion_prueba">Prueba de Impresión</string>
    <string name="titulo_detalle_descuento">Detalles de los descuentos</string>
    <string name="titulo_devolucion_con_informacion">Devolución con información</string>
    <string name="titulo_test_comunicacion_datafono">Prueba de comunicación TEF</string>
    <string name="titulo_mercado_pago">Mercado Pago</string>
    <string name="titulo_bono_sodexo">Bono Sodexo</string>
    <string name="titulo_productos_bazar">Productos del Bazar</string>
    <string name="titulo_cierre_contingencia">Cierre TEF Contingencia</string>
    <string name="titulo_re_impresion_tef">Re-Imprimir Comprobante TEF</string>
    <string name="Titulo_tipo_datafono">Dispositivo</string>
    <string name="tipo_datafono_ej">SmartPOS N6</string>
    <string name="titulo_estado_dispositivo">Estado</string>
    <string name="dispositivo_activo">Activo</string>
    <string name="dispositivo_inactivo">Inactivo</string>
    <string name="titulo_select_tipo_dispositivo">Seleccione el proveedor y tipo de dispositivo a configurar</string>
    <string name="credibanco">CredibanCo</string>
    <string name="Redeban">Redeban</string>
    <string name="titulo_compra_en_datafono_n6">Compra datafono %1$s</string>
    <string name="progress_seguir_pasos_datafono_n6">Oprima el botón (Venta) del datáfono y sigue las instrucciones…</string>
    <string name="progress_seguir_pasos_datafono_n6_anulacion">En el menú desplegable del datafono (Parte superior izquierda), seleccione la opción (Funciones Principales) luego (Anulación) y sigue las instrucciones…</string>
    <string name="progress_seguir_pasos_datafono_n6_comprobar_pago">En caso de que el pago no se haya realizado, Oprima el botón (Venta) del datáfono y sigue las instrucciones…</string>
    <string name="et_usuario_datafono">Usuario datáfono</string>
    <string name="et_pass_datafono">Contraseña datáfono</string>
    <string name="codigo_unico_datafono">Código único comercio</string>
    <string name="et_time_datafono_espera">TimeOut espera datáfono (Mayor o igual a 3m)</string>
    <string name="codigo_datafono">Código datáfono</string>
    <string name="tv_msj_error_conexion_n6">Problemas con la conexión a internet, si la transacción sigue en proceso valide el pago con el botón (Comprobar Pago).</string>
    <string name="tv_msj_error_conexion_n6_anulacion">Problemas con la conexión a internet, si la anulación sigue en proceso puede validarla con el botón (Comprobar Anulación).</string>
    <string name="comprobar_pago">Comprobar pago</string>
    <string name="progress_cargando">Cargando…</string>
    <string name="titulo_configure_el_datafono">Configuración del datafono %1$s</string>
    <string name="trasacion_pendiente">Transación en estado PENDIENTE</string>
    <string name="msj_alerta_cancelar_tef">Para cancelar la transación debes darle al botón (Venta) del datafono y luego al botón (Cambiar).</string>
    <string name="progress_seguir_pasos_datafono_n6_prueba">Oprima el botón (Venta) del datáfono y sigue las instrucciones (%1$s)…</string>
    <string name="aprobacion">Aprobación:</string>
    <string name="configuraciones">Configuración</string>
    <string name="imprimir_info">Imprimir</string>
    <string name="progress_consultando_ultima_tef">Consultando…</string>
    <string name="sin_registro">Sin registro</string>
    <string name="texto_anulacion">ANULACION</string>
    <string name="texto_anulacion_2">Seleccione la transacción TEF que desea anular.</string>
    <string name="ups_algo_mal">¡Ups! Algo salió mal</string>
    <string name="reintentar">Reintentar</string>
    <string name="ups_algo_mal_msj_actualizar">Lamentablemente, hemos encontrado un problema en la actualización de la transacción. Cod (%1$s)</string>
    <string name="la_transaccion_ya_anulada">Esta transacción ya se encuentra anulada.</string>
    <string name="progress_anulando">Anulando…</string>
    <string name="comprobar_anulacion">Comprobar anulación</string>
    <string name="positivo_anulacion">Anular</string>
    <string name="negativo_anulacion">Más información</string>
    <string name="seleccione_opcion_tef">Transacción tef (%1$s)</string>
    <string name="texto_seleccione_opcion_tef">¿Desea anular la transacción tef o ver mas información?</string>
    <string name="progress_actualizando_tef">Actualizando anulación…</string>
    <string name="msj_alerta_cancelar_tef_anulacion">Para cancelar la anulación debes ir al menú desplegable del datafono (Parte superior izquierda), seleccione la opción (Funciones Principales) luego (Anulación) y oprime el botón (Cambiar)…</string>
    <string name="listo">Listo</string>
    <string name="cambiar">Cambiar</string>
    <string name="sobreescribir_proceso_titulo">SOBRESCRIBIR</string>
    <string name="msj_alerta_cancelar_tef_3">Para sobrescribir la transacción, primero presiona el botón (Venta) en el datáfono, luego selecciona (Cambiar). Una vez completado el proceso, pulsa el botón (Listo).</string>
    <string name="msj_alerta_cancelar_tef_2">Aún tienes una transacción pendiente por un valor de %1$s. ¿Te gustaría continuar con ella o cambiarla por %2$s?</string>
    <string name="msj_alerta_cancelar_tef_4">Aún tienes una transacción pendiente por un valor de %1$s. ¿Te gustaría continuar con ella o cambiarla?</string>
    <string name="animacion_escanear_cedula">license_scanning.json</string>
    <string name="animacion_splash_inicio">splash_inicio.lottie</string>
    <string name="animacion_splash_inicio2">splash_inicio2.lottie</string>
    <string name="animacion_inicio_sesion">inicio_session.json</string>
    <string name="animacion_compra_realizada">animation_compra1.json</string>
    <string name="animacion_here">animation_here.json</string>
    <string name="animacion_buscar">animation_buscar.json</string>
    <string name="animacion_info">animation_information.lottie</string>
    <string name="animacion_flecha_derecha_azul">animation_flecha_derecha_azul.json</string>
    <string name="animacion_cara_enojada">animation_cara_enojada.json</string>
    <string name="animacion_cara_neutral">animation_cara_neutral.json</string>
    <string name="animacion_cara_feliz">animation_cara_feliz.json</string>
    <string name="animacion_carga_1">animation_carga_1.json</string>
    <string name="usuario">Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="confirmar">Confirmar</string>
    <string name="cancelar">Cancelar</string>
    <string name="entiendo">Entiendo</string>
    <string name="volver">Volver</string>
    <string name="finalizar">Finalizar</string>
    <string name="acepto">Acepto</string>
    <string name="ok">OK</string>
    <string name="resultado">Resultado</string>
    <string name="sin_resultado">Sin resultado</string>
    <string name="n_a">N/A</string>
    <string name="cpcl">CPCL</string>
    <string name="esc_pos">ESC/POS</string>
    <string name="rfid">RFID</string>
    <string name="buscar">Buscar</string>
    <string name="inactivo">Inactivo</string>
    <string name="error">Error</string>
    <string name="alerta">Alerta</string>
    <string name="efectivo">Efectivo</string>
    <string name="imprimir">Imprimir</string>
    <string name="cero_0">0</string>
    <string name="actualizar">Actualizar</string>
    <string name="_ir">IR</string>
    <string name="desconectando">Desconectando</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="autorizar">Autorizar</string>
    <string name="atras">Atras</string>
    <string name="autorizacion">Autorización</string>
    <string name="usurio_requerido">Usuario requerido</string>
    <string name="codigo_requerido">Código requerido</string>
    <string name="pass_requerido">La contraseña es requerida</string>
    <string name="cajas">Cajas</string>
    <string name="caja">caja</string>
    <string name="informacion">Información</string>
    <string name="tienda">tienda</string>
    <string name="salir">Salir</string>
    <string name="aceptar">Aceptar</string>
    <string name="tiendas">Tiendas</string>
    <string name="vendedores">Vendedores</string>
    <string name="descuentos">Descuentos</string>
    <string name="importe">Importe</string>
    <string name="deuda">Deuda</string>
    <string name="calcular">Calcular</string>
    <string name="anadir">Añadir</string>
    <string name="mas">+</string>
    <string name="entendido">Entendido</string>
    <string name="eliminar">Eliminar</string>
    <string name="mostrar_todos">Mostrar Todos</string>
    <string name="pago">Pago</string>
    <string name="monto">Monto</string>
    <string name="enviar">Enviar</string>
    <string name="anular">Anular</string>
    <string name="mensaje">Mensaje</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="leer">Leer</string>
    <string name="devolucion">Devolución</string>
    <string name="sigigual">=</string>
    <string name="ninguno">Ninguno</string>
    <string name="cajero">Cajero</string>
    <string name="continuar">Continuar</string>
    <string name="guardar">Guardar</string>
    <string name="deuda_">Deuda:</string>
    <string name="total_">Total:</string>
    <string name="tipo_">Tipo:</string>
    <string name="cerrar">Cerrar</string>
    <string name="prueba">Prueba</string>
    <string name="tef">TEF</string>
    <string name="factura">Factura</string>
    <string name="error_crear_directorio">Hubo un problema creando el directorio para guardar el XML configuración, comuniquese con el administrador.</string>
    <string name="mensaje_guardar_xml">No se puede guardar el archivo XML porque el directorio no se creó correctamente, comuniquese con el administrador.</string>
    <string name="mensaje_cargar_xml">No se puede cargar el archivo, no hay ninguna configuración previamente guardada.</string>
    <string name="guardado_exitoso_xml">La configuración del dispositivo se guardo correctamente.</string>
    <string name="consultar_qr">Generar QR</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="actualizar_caja">Actualizar Caja</string>
    <string name="consultar_cliente">Consultar Cliente</string>
    <string name="titulo_test_comunicacion_tef">Prueba de comunicación</string>
    <string name="modo_autonomo">Modo Autónomo</string>
    <string name="gestion_modo_autonomo">Gestión Modo Autónomo</string>
    <string name="realizar_cierre_apertura">Realizar Cierre/Apertura</string>
    <string name="tef_contingencia">TEF Contingencia</string>
    <string name="config_impresora">Configurar Impresora</string>
    <string name="ip_dns">IP/DNS</string>
    <string name="direccion_ip">Dirección IP:</string>
    <string name="direccion_mac">Dirección MAC:</string>
    <string name="puerto_">Puerto:</string>
    <string name="ip_ejemplo_impresion">10.40.60.80</string>
    <string name="puerto9100">9100</string>
    <string name="mac_ejemplo_impresion">00:00:00:00:00:00</string>
    <string name="consultar_cupo_empleado">Consultar cupo empleado</string>
    <string name="suspension_documento">Suspensión de documento</string>
    <string name="resumen">Resumen</string>
    <string name="obtener_suspensiones">Recuperar Transacciones Suspendidas</string>
    <string name="titulo_impresion_documento">Impresión de transaciones</string>
</resources>