<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:icon="@drawable/vector_trespuntos"
        android:id="@+id/MenuOpciones"
        android:title="Más"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/mItemCupoEmpleado"
                android:icon="@mipmap/consultar_cupo_empleado"
                android:title="@string/consultar_cupo_empleado" />
            <item
                android:id="@+id/mItemDevolucionConInfo"
                android:icon="@mipmap/devolucion_informacion"
                android:title="@string/titulo_devolucion_con_informacion" />
            <item
                android:id="@+id/mItemSuspension"
                android:icon="@mipmap/suspender_documento"
                android:title="@string/suspension_documento" />
        </menu>
    </item>
</menu>