<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clDatafonoPagoA"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvTotalDatafonoA"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:text="@string/total_"
        android:textColor="#000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/btnDeudaDatafonoA"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDeudaDatafonoA"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:text="@string/deuda_"
        android:textColor="#000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/btnDeudaDatafonoA"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTotalDatafonoA" />

    <Button
        android:id="@+id/btnDeudaDatafonoA"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:text="@string/sigigual"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tvDeudaDatafonoA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvTotalDatafonoA" />

    <EditText
        android:id="@+id/etMontoDatafonoA"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:ems="10"
        android:hint="@string/importe"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnPagoDatafonoA"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDeudaDatafonoA" />

    <Button
        android:id="@+id/btnPagoDatafonoA"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:text="@string/pago"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/etMontoDatafonoA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etMontoDatafonoA" />

</androidx.constraintlayout.widget.ConstraintLayout>