<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clPTBDF"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.crystal.bazarposmobile.ui.dialogfragmen.PagoTipoBonoDialogFragment">


    <TextView
        android:id="@+id/tvTituloTotalPTBDF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/total_"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTotalPTBDF"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginStart="4dp"
        android:text="@string/cero_0"
        android:textColor="@color/colorSecudary"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvTituloTotalPTBDF"
        app:layout_constraintStart_toEndOf="@+id/tvTituloTotalPTBDF"
        app:layout_constraintTop_toTopOf="@+id/tvTituloTotalPTBDF" />

    <TextView
        android:id="@+id/tvTituloDeudaPTBDF"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/deuda_"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloTotalPTBDF" />

    <TextView
        android:id="@+id/tvDeudaPTBDF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/cero_0"
        android:textColor="@color/colorSecudary"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvTituloDeudaPTBDF"
        app:layout_constraintStart_toEndOf="@+id/tvTituloDeudaPTBDF"
        app:layout_constraintTop_toTopOf="@+id/tvTituloDeudaPTBDF" />

    <EditText
        android:id="@+id/etImportePTBDF"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/importe"
        android:inputType="number"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnCalcularPTBDF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloDeudaPTBDF" />

    <Button
        android:id="@+id/btnCalcularPTBDF"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text="@string/sigigual"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/etImportePTBDF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etImportePTBDF" />

</androidx.constraintlayout.widget.ConstraintLayout>
