<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clBQRA"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.BancolombiaQrActivity">

    <TextView
        android:id="@+id/tvTituloTotalBQRA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/total_"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTotalBQRA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="@string/cero_0"
        android:textColor="@color/colorSecudary"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvTituloTotalBQRA"
        app:layout_constraintStart_toEndOf="@+id/tvTituloTotalBQRA"
        app:layout_constraintTop_toTopOf="@+id/tvTituloTotalBQRA" />

    <TextView
        android:id="@+id/tvTituloDeudaBQRA"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:text="@string/deuda_"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tvTituloTotalBQRA"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloTotalBQRA" />

    <TextView
        android:id="@+id/tvDeudaBQRA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="@string/cero_0"
        android:textColor="@color/colorSecudary"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvTituloDeudaBQRA"
        app:layout_constraintStart_toEndOf="@+id/tvTituloDeudaBQRA"
        app:layout_constraintTop_toTopOf="@+id/tvTituloDeudaBQRA" />

    <ProgressBar
        android:id="@+id/progressBarBQRA"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etImporteBQRA"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp"
        android:ems="10"
        android:hint="@string/importe"
        android:inputType="number"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnCalcularBQRA"
        app:layout_constraintEnd_toStartOf="@+id/btnCalcularBQRA"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnCalcularBQRA" />

    <Button
        android:id="@+id/btnCalcularBQRA"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/sigigual"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloDeudaBQRA" />

    <Button
        android:id="@+id/btnConsultarQrBQRA"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:text="@string/consultar_qr"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etImporteBQRA" />

    <ImageView
        android:id="@+id/ivBQRA"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnConsultarQrBQRA" />

</androidx.constraintlayout.widget.ConstraintLayout>